# status-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build-android.sh  conanfile.py  generate-rcc.sh
docs/: README.md  building.md
qml/: generate-rcc.sh  main.qml  resources.qrc
qml/app/: AppMain.qml
qml/app/AppLayouts/Browser/: BrowserLayout.qml
qml/app/AppLayouts/Chat/: ChatColumn.qml  ChatLayout.qml  CommunityColumn.qml  ContactsColumn.qml
qml/app/AppLayouts/Chat/ChatColumn/: ChatMessages.qml  EmptyChat.qml  Message.qml  SuggestionFilter.qml  TopBar.qml
qml/app/AppLayouts/Chat/ChatColumn/ChatComponents/: ChatCommandModal.qml  SignTransactionModal.qml
qml/app/AppLayouts/Chat/ChatColumn/MessageComponents/: ChannelIdentifier.qml  ChatButtons.qml  ChatReply.qml  ChatText.qml  CompactMessage.qml  DateGroup.qml  EmojiReactions.qml  LinksMessage.qml  MessageMouseArea.qml  NormalMessage.qml  Retry.qml  Sticker.qml  UserImage.qml  UsernameLabel.qml
qml/app/AppLayouts/Chat/ContactsColumn/: Channel.qml  ChannelList.qml
qml/app/AppLayouts/Chat/components/: ChannelContextMenu.qml  Contact.qml  ContactList.qml  EmojiReaction.qml  FetchMoreMessages.qml  GroupChatPopup.qml  GroupInfoPopup.qml  LeftTabBottomButtons.qml  MessageContextMenu.qml  NicknamePopup.qml  PrivateChatPopup.qml  PrivateChatPopupExistingContacts.qml  PrivateChatPopupSearchResults.qml  ProfilePopup.qml  PublicChatPopup.qml  RenameGroupPopup.qml  SuggestedChannel.qml
qml/app/AppLayouts/Node/: NodeLayout.qml
qml/app/AppLayouts/Profile/: ProfileLayout.qml
qml/app/AppLayouts/Profile/LeftTab/: Menu.qml
qml/app/AppLayouts/Profile/LeftTab/components/: MenuButton.qml
qml/app/AppLayouts/Profile/Sections/: AboutContainer.qml  AdvancedContainer.qml  AppearanceContainer.qml  BackupSeedModal.qml  ChangeProfilePicModal.qml  ChatLinksPreviewModal.qml  ContactsContainer.qml  DevicesContainer.qml  EnsContainer.qml  FleetRadioSelector.qml  FleetsModal.qml  LanguageContainer.qml  LanguageModal.qml  MyProfileContainer.qml  NetworkRadioSelector.qml  NetworksModal.qml  PrivacyContainer.qml  SyncContainer.qml
qml/app/AppLayouts/Profile/Sections/Contacts/: Contact.qml  ContactList.qml
qml/app/AppLayouts/Profile/Sections/Ens/: ENSDetails.qml  ENSPopup.qml  List.qml  Search.qml  Welcome.qml
qml/app/AppLayouts/Timeline/: TimelineLayout.qml
qml/app/AppLayouts/Wallet/: AccountSettingsModal.qml  AddCustomTokenModal.qml  AssetsTab.qml  LeftTab.qml  ReceiveModal.qml  SeedPhraseBackupWarning.qml  SendModal.qml  SetCurrencyModal.qml  SignPhraseModal.qml  WalletHeader.qml  WalletLayout.qml
qml/app/AppLayouts/Wallet/components/: AddAccount.qml  AddAccountWithPrivateKey.qml  AddAccountWithSeed.qml  AddWatchOnlyAccount.qml  GenerateAccountModal.qml  SetCurrencyModalContent.qml  TokenSettingsModalContent.qml
qml/imports/: Constants.qml  Emoji.qml  SelectedMessage.qml  UserIdentity.qml  Utils.qml  qmldir
qml/imports/CID/: cid.min.js
qml/imports/RPC/: IdentityImage.qml  RpcClient.qml
qml/model/: SignUp.qml  qmldir
qml/onboarding/: CreatePasswordModal.qml  ExistingKey.qml  GenKey.qml  GenKeyModal.qml  KeysMain.qml  Login.qml  MnemonicRecoverySuccessModal.qml
qml/onboarding/Login/: AccountList.qml
qml/shared/: AccountSelector.qml  AddressInput.qml  AssetAndAmountInput.qml  AssetSelector.qml  ContactSelector.qml  CopyToClipBoardButton.qml  EnsResolver.qml  GasSelector.qml  GasValidator.qml  ImageLoader.qml  Input.qml  RecipientSelector.qml  RoundedImage.qml  SendToContractWarning.qml  StatusTabButton.qml  Timer.qml
qml/shared/status/: StatusChatImageSizeValidator.qml  StatusChatInfo.qml  StatusChatInfoButton.qml  StatusChatInput.qml  StatusChatInputReplyArea.qml  StatusIconTabButton.qml  StatusIdenticon.qml  StatusLetterIdenticon.qml  StatusStickerList.qml  StatusStickerMarket.qml  StatusStickerPackDetails.qml  StatusStickerPackPurchaseModal.qml  StatusStickersPopup.qml  qmldir
resources/: default-networks.json  default-tokens.json  fleets.json  infura_key  node-config.json  resources.qrc
scripts/: build-statusgo-android.sh
src/: chat-type.cpp  chat-type.hpp  chat.cpp  chat.hpp  chats-model.cpp  chats-model.hpp  constants.cpp  constants.hpp  contact.cpp  contact.hpp  contacts-model.cpp  contacts-model.hpp  content-type.cpp  content-type.hpp  custom-networks-model.cpp  custom-networks-model.hpp  ens-model.cpp  ens-utils.cpp  ens-utils.hpp  login-model.cpp  login-model.hpp  logs.cpp  mailserver-cycle.cpp  mailserver-cycle.hpp  main.cpp  message-format.cpp  message-format.hpp  message-type.cpp  message-type.hpp  message.cpp  message.hpp  messages-model.cpp  messages-model.hpp  onboarding-model.cpp  onboarding-model.hpp  settings.cpp  settings.hpp  signing-phrases.hpp  status.cpp  status.hpp  (+2 more)
src/chat/: CMakeLists.txt  chat-type.hpp  chat.cpp  chat.hpp  chats-model.cpp  chats-model.hpp  content-type.cpp  content-type.hpp  message-format.cpp  message-type.cpp  message-type.hpp  message.cpp  message.hpp  messages-model.cpp  messages-model.hpp  stickerpack-utils.cpp  stickerpack-utils.hpp  stickerpack.cpp  stickerpack.hpp  stickers-model.cpp  stickers-model.hpp
src/contacts/: CMakeLists.txt  contact.cpp  contact.hpp  contacts-model.cpp  contacts-model.hpp
src/core/: CMakeLists.txt  constants.cpp  constants.hpp  ipfs-async-image-response.cpp  ipfs-async-image-response.hpp  ipfs-image-provider.cpp  ipfs-image-provider.hpp  mailserver-cycle.cpp  mailserver-cycle.hpp  settings.cpp  settings.hpp  status.cpp  status.hpp  utils.cpp  utils.hpp
src/ens/: CMakeLists.txt  ens-model.cpp  ens-model.hpp  ens-utils.cpp
src/login/: CMakeLists.txt  login-model.cpp  login-model.hpp  onboarding-model.cpp  onboarding-model.hpp  signing-phrases.hpp
src/profile/: CMakeLists.txt  devices-model.cpp  devices-model.hpp  mailserver-cycle.cpp  mailserver-cycle.hpp  mailserver-model.cpp  mailserver-model.hpp
src/wallet/: CMakeLists.txt  balance-watcher.cpp  balance-watcher.hpp  price-watcher.cpp  price-watcher.hpp  token-model.cpp  token-model.hpp  wallet-model.cpp  wallet-model.hpp  wallet.cpp  wallet.hpp
(+2 files in other folders)
